shortened footer height to avoid visibility on scroll for laptops, fixed order/sorting of ideas and projects on front page

--- a/assets/css/banners.css
+++ b/assets/css/banners.css
@@ -98,7 +98,7 @@
   display: flex;
   justify-content: space-between;
   padding: 35pt 57pt;
-  padding-top: 50svh;
+  padding-top: 12svh;
 }
 
 .footer-text {
